# HrBot

./: .gitattributes  README.md
Backend/: employees_dataset.csv  pyproject.toml  requirements.txt
Backend/RagUtils/: HrBot.py  Intializedata.py  main.py
Backend/RagUtils/employeesEmbed/: index.faiss  index.pkl
Frontend/: package-lock.json  package.json
Frontend/Components/: ChatBox.css  ChatBox.jsx  Header.css  Header.jsx  SearchBox.css  SearchBox.jsx
Frontend/src/: App.css  App.jsx
