[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.16",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "langchainhub>=0.1.21",
    "pandas>=2.3.1",
    "sentence-transformers>=5.1.0",
    "uvicorn>=0.35.0",
]
